@startuml
class IcrObject <<partial>> {
}
class Stuff {
    + Volume : decimal <<get>>
    + BaseVolume : decimal <<get>>
    + Stuff(iobj:IcrObject, vol:decimal)
    + Multiply(times:decimal) : Stuff
    + Clone() : Stuff
}
class Recipe {
    - Recipe()
    + IsEmpty : bool <<get>>
    {static} <<internal>> Decode(recipe_str:string) : IEnumerable<Recipe>
    + FinalRequirements() : (Stuff[] aggregated, string[] benches)
    + <<override>> ToString() : string
}
IcrObject +-- Stuff
Stuff --> "Item" IcrObject
IcrObject +-- Recipe
Recipe --> "Bench" IcrObject
Recipe o-> "Empty" Recipe
@enduml
